--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/router": "~12.1.0-",
     "materialize-css": "^1.0.0-rc.2",
     "rxjs": "~6.6.0",
+    "tone": "^14.7.77",
     "tslib": "^2.2.0",
     "zone.js": "~0.11.4"
   },
